[package]
name = "scoresaber-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
serde_repr = "0.1.7"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.8", features = ["json"] }